# pr-autofix-agent

./: .gitignore  .pr-agent.yml  .pr-agent.yml.example  .pr-autofix.yml  .pr-autofix.yml.example  README.md  pyproject.toml
.github/workflows/: autofix-on-pr.yml  ci.yml  pr-autofix-agent.yml
pr_agent/: __init__.py  _paths.py  classifier.py  config.py  github_client.py  llm_client.py  models.py  patcher.py  run.py  state.py  validator.py
pr_agent/llm/: __init__.py  _base.py  _factory.py  anthropic.py  openai.py
tests/: conftest.py  test_classifier.py  test_config.py  test_github_client.py  test_llm_providers.py  test_llm_response_error.py  test_models.py  test_patcher.py  test_patcher_e2e.py  test_patcher_properties.py  test_paths.py  test_phase15.py  test_round_strategies.py  test_run_helpers.py  test_state.py  test_validator.py
