[project]
name = "pr-autofix-agent"
version = "0.1.0"
description = "Autonomous GitHub PR autofix agent for Cursor Bugbot review threads."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "PyGithub>=2.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
pr-autofix-agent = "pr_agent.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pr_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
